# pydra-ants

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  NOTICE  README.md  README.rst  hatch.toml  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci-cd.yaml  ci.yaml  publish.yaml  pythonpackage.yml  test.yaml
docs/: conf.py  index.rst
docs/source/: conf.py  index.rst
nipype-auto-conv/: generate  requirements.txt
nipype-auto-conv/specs/: affine_initializer.yaml  affine_initializer_callables.py  ai.yaml  ai_callables.py  ants.yaml  ants_callables.py  ants_introduction.yaml  ants_introduction_callables.py  apply_transforms.yaml  apply_transforms_callables.py  apply_transforms_to_points.yaml  apply_transforms_to_points_callables.py  atropos.yaml  atropos_callables.py  average_affine_transform.yaml  average_affine_transform_callables.py  average_images.yaml  average_images_callables.py  brain_extraction.yaml  brain_extraction_callables.py  buildtemplateparallel.yaml  buildtemplateparallel_callables.py  compose_multi_transform.yaml  compose_multi_transform_callables.py  composite_transform_util.yaml  composite_transform_util_callables.py  convert_scalar_image_to_rgb.yaml  convert_scalar_image_to_rgb_callables.py  cortical_thickness.yaml  cortical_thickness_callables.py  create_jacobian_determinant_image.yaml  create_jacobian_determinant_image_callables.py  create_tiled_mosaic.yaml  create_tiled_mosaic_callables.py  denoise_image.yaml  denoise_image_callables.py  gen_warp_fields.yaml  gen_warp_fields_callables.py  image_math.yaml  image_math_callables.py  (+27 more)
nipype-auto-conv/specs/classes/: nipype.interfaces.ants.base.Info.yaml  nipype.interfaces.base.core.PackageInfo.yaml
nipype-auto-conv/specs/interfaces/: affine_initializer.yaml  ai.yaml  ai_callables.py  ants.yaml  ants_introduction.yaml  apply_transforms.yaml  apply_transforms_to_points.yaml  apply_transforms_to_points_callables.py  atropos.yaml  atropos_callables.py  average_affine_transform.yaml  average_affine_transform_callables.py  average_images.yaml  brain_extraction.yaml  brain_extraction_callables.py  buildtemplateparallel.yaml  compose_multi_transform.yaml  composite_transform_util.yaml  composite_transform_util_callables.py  convert_scalar_image_to_rgb.yaml  cortical_thickness.yaml  create_jacobian_determinant_image.yaml  create_jacobian_determinant_image_callables.py  create_tiled_mosaic.yaml  create_tiled_mosaic_callables.py  denoise_image.yaml  denoise_image_callables.py  gen_warp_fields.yaml  gen_warp_fields_callables.py  image_math.yaml  image_math_callables.py  joint_fusion.yaml  joint_fusion_callables.py  kelly_kapowski.yaml  kelly_kapowski_callables.py  label_geometry.yaml  label_geometry_callables.py  laplacian_thickness.yaml  measure_image_similarity.yaml  measure_image_similarity_callables.py  (+11 more)
pydra/: antsRegisteration_help.txt
pydra/tasks/ants/: Preprocess.py  __init__.py  _version.py  base.py  latest.py
pydra/tasks/ants/registration/: antsRegisteration_help.txt  registration.py
pydra/tasks/ants/registration/tests/: test_run_registration.py  test_spec_registration.py
pydra/tasks/ants/segmentation/: atropos.py  n4biasfieldcorrection.py
pydra/tasks/ants/segmentation/tests/: test_run_n4biasfieldcorrection.py  test_spec_n4biasfieldcorrection.py
pydra/tasks/ants/utils/: ai.py  imagemath.py  multiplyimages.py  thresholdimage.py
pydra/tasks/ants/utils/tests/: test_run_ai.py  test_run_imagemath.py  test_run_multiplyimages.py  test_run_thresholdimage.py  test_spec_ai.py  test_spec_imagemath.py  test_spec_multiplyimages.py  test_spec_thresholdimage.py
pydra/tasks/ants/v2_5/: apply_transforms.py  bias_correction.py  create_jacobian_determinant_image.py  registration.py
related-packages/fileformats/: README.rst  pyproject.toml
related-packages/fileformats-extras/: README.rst  pyproject.toml
related-packages/fileformats-extras/fileformats/extras/medimage_ants/: __init__.py
related-packages/fileformats-extras/fileformats/extras/medimage_ants/tests/: test_generate_sample_data.py
related-packages/fileformats/fileformats/medimage_ants/: __init__.py
specs/: ants_registration_param.yml  ants_segmentation_param.yml  ants_utils_param.yml  callables.py
src/pydra/tasks/ants/: __init__.py  apply_transforms.py  bias_correction.py  bias_field_correction.py  create_jacobian_determinant_image.py  registration.py
tests/: test_ants_function.py
tools/: converter.py  report_progress.py  requirements.txt
tools/tests/: test_converter.py
