[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
authors = [
  { name = "Ghislain Vaillant", email = "ghislain.vaillant@icm-institute.org" },
]
dependencies = [
  "pydra >=0.22",
  "fileformats >=0.8.3",
  "fileformats-datascience >=0.1",
  "fileformats-medimage >=0.4.1",
  #    "fileformats-medimage-ants"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
  "Topic :: Software Development :: Libraries",
]

[project.urls]


version-file = "pydra/tasks/ants/_version.py"
[tool.hatch.build.targets.wheel]
only-include = ["src/pydra/tasks/ants"]
sources = ["src"]

[tool.hatch.envs.default]
dependencies = ["pytest"]
[tool.hatch.envs.default.scripts]
test = "pytest {args}"

[[tool.hatch.envs.default.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["--doctest-modules", "--doctest-continue-on-failure"]
pythonpath = ["src"]
testpaths = ["src"]

[tool.ruff.lint]
ignore = ["FBT001", "FA100"]
